<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.register.RegisterActivity"
    android:orientation="vertical">

    <include layout="@layout/toolbar_activity" />

    <android.support.v7.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/txt_register"
        android:textSize="26sp"
        tools:text="LOG IN" />

    <android.support.v7.widget.AppCompatTextView
        style="@style/NormalText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="25dp"
        android:text="@string/email"
        android:textStyle="normal" />

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/edt_register_email"
        style="@style/TextAppearance.AppCompat.Body1"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_marginBottom="4dp"
        android:layout_marginEnd="@dimen/padding_left"
        android:layout_marginStart="@dimen/padding_left"
        android:background="@drawable/edit_text_style"
        android:lines="1"
        android:padding="8dp"
        android:singleLine="true" />

    <android.support.v7.widget.AppCompatTextView
        style="@style/NormalText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:text="@string/password" />

    <android.support.v7.widget.AppCompatEditText
        style="@style/TextAppearance.AppCompat.Body1"
        android:id="@+id/edt_register_password"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_marginBottom="4dp"
        android:layout_marginEnd="@dimen/padding_left"
        android:layout_marginStart="@dimen/padding_left"
        android:layout_marginTop="10dp"
        android:background="@drawable/edit_text_style"
        android:lines="1"
        android:padding="8dp"
        android:singleLine="true" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btn_register_sing_up"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="@dimen/padding_left"
        android:layout_marginStart="@dimen/padding_left"
        android:layout_marginTop="24dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/txt_register"
        android:textSize="14sp" />

</LinearLayout>